fix layout on mobile

--- a/app/_features/room/styles/room.module.css
+++ b/app/_features/room/styles/room.module.css
@@ -4,6 +4,8 @@
 }
 
 .media {
+  min-height: 0;
+  height: 100%;
   gap: 0.5rem;
   grid-row-start:1;
   grid-row-end: span 7;
@@ -34,13 +36,41 @@
 }
 
 .presenting-media {
+  min-height: 0;
+  height: 100%;
   grid-row:auto/auto;
-  grid-column:2/auto;
+  grid-column:auto/auto;
 }
 
-.gallery-media video {
+.gallery-media video{
   height: 100%;
   aspect-ratio: 4/3;
   object-fit: cover;
   margin:0 auto;
+}
+
+.presenting-media video {
+  height: 100%;
+  aspect-ratio: 16/9;
+  object-fit: cover;
+  margin:0 auto;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .gallery{
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(90px, 1fr));
+  }
+
+  .gallery-media video{
+    height: 100%;
+    aspect-ratio: 3/4;
+    object-fit: cover;
+    margin:0 auto;
+  }
+
+  .presenting {
+    grid-template-rows: 80% 20%;
+  }
 }
